# alerts_nemo

./: .gitignore  pyproject.toml
lib/llm_parallelization/src/llm_parallelization/: llm_processor.py  new_processor.py  parallelization.py  schema_processor.py  tmp.py
quantization/old/: quantize_compressor.py
quantization/working/awq_quantize_py311/: pyproject.toml  quantize_awq.py  quantize_awq_2.py
scripts/analysis/: compare_datasets.py
scripts/classification/: alerts_llama_3b.py  alerts_refined.py  prepare_fine_tuning_data.py  reformat_to_simplified_format.py  test.py
scripts/finetuning/: accelerate_config.yaml  finetune_optimized.py  launch_training.sh  merge_lora.py  run_finetuned_model.py
scripts/generation/: claude_comment_generation.py  nemo_comment_generation.py  nemo_comment_rewrite.py
scripts/testing/: test_quantized_model.py
